# geminidb-studio

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
apps/bridge/: bridge-security.mjs  bridge-security.test.mjs  influx-client.mjs  influx-client.test.mjs  parent-watchdog.mjs  parent-watchdog.test.mjs  server.mjs
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  QueryEditor.tsx  ResultsTable.tsx  ai-diagnostics.css  api.ts  bridge-status.css  completion-trigger.test.mjs  connection-dialog.css  connections.test.mjs  connections.ts  credentials.ts  data-grid.css  database-switcher.css  database-switcher.test.mjs  day-tables.test.mjs  day-tables.ts  desktop.ts  diagnostic-provider.ts  diagnostics.test.mjs  diagnostics.ts  editor-loading.css  endpoint.test.mjs  endpoint.ts  favorite-dialog.css  history-interaction.test.mjs  history-table.css  influxql-completion.test.mjs  influxql-completion.ts  influxql-time-hover.test.mjs  influxql-time-hover.ts  main.tsx  query-editor.css  responsive-layout.css  result-export.test.mjs  result-export.ts  result-time.test.mjs  result-time.ts  results-scroll.css  sidebar-polish.css  sidebar-resize.css  (+14 more)
scripts/: build-sidecar.mjs  dev-desktop.mjs  pe-subsystem.mjs  pe-subsystem.test.mjs  sidecar-config.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
