[package]
name = "geminidb-studio"
version = "0.4.1"
description = "GeminiDB Influx desktop query client"
authors = ["GeminiDB Studio"]
edition = "2021"

[lib]
name = "geminidb_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native"] }
